deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend 
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80     # Port exposed by the service
      targetPort: 3000  # Port exposed by the PostgreSQL container
  type: ClusterIP 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: bck-container 
          image: us-central1-docker.pkg.dev/watchmen-monitoring/repo/frontend:latest
          resources:
            limits:
              cpu: "4"
              memory: "500Mi"
            requests:
              cpu: "2"
              memory: "300Mi"
          ports:
          - containerPort: 9000
